
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ ULONG ;
struct TYPE_2__ {int Base; int ImageName; } ;
typedef int * PVOID ;
typedef scalar_t__* PULONG ;
typedef scalar_t__ PUCHAR ;
typedef TYPE_1__* PSYSTEM_MODULE_INFORMATION ;
typedef int * PCHAR ;


 int ErrorQuit (char*) ;
 int SystemModuleInformation ;
 scalar_t__ ZwQuerySystemInformation (int ,int *,scalar_t__,scalar_t__*) ;
 int free (int *) ;
 int * malloc (scalar_t__) ;
 int * strstr (int ,char*) ;

ULONG GetKernelBase()
{
    ULONG i, Byte, ModuleCount;
    PVOID pBuffer;
    PSYSTEM_MODULE_INFORMATION pSystemModuleInformation;
    PCHAR pName;

    ZwQuerySystemInformation(SystemModuleInformation, (PVOID)&Byte, 0, &Byte);

    if((pBuffer = malloc(Byte)) == ((void*)0))
        ErrorQuit("malloc failed.\n");

    if(ZwQuerySystemInformation(SystemModuleInformation, pBuffer, Byte, &Byte))
        ErrorQuit("ZwQuerySystemInformation failed\n");

    ModuleCount = *(PULONG)pBuffer;
    pSystemModuleInformation = (PSYSTEM_MODULE_INFORMATION)((PUCHAR)pBuffer + sizeof(ULONG));
    for(i = 0; i < ModuleCount; i++)
    {
        if((pName = strstr(pSystemModuleInformation->ImageName, "ntoskrnl.exe")) != ((void*)0))
        {
            free(pBuffer);
            return (ULONG)pSystemModuleInformation->Base;
        }

        pSystemModuleInformation++;
    }

    free(pBuffer);
    return 0;
}
